--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ pydantic_core==2.20.1
 pymongo==4.8.0
 pypdfium2==4.30.0
 python-dotenv==1.0.1
+pytz==2024.2
 requests==2.32.3
 sniffio==1.3.1
 starlette==0.38.2
